--- a/index.html
+++ b/index.html
@@ -6,53 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./normalize.css" rel="stylesheet" />
     <link href="./ios.css" rel="stylesheet" />
-    <title>Просто вкладка</title>
+    <title>Желанный тестировщик</title>
   </head>
   <body>
     <header class="header">
       <img src="Вика аватарка.png" alt="фотография на фоне гор" class="header__avatar" />
       <div class="header__textContainer">
         <h1 class="header__title">Виктория Сопильняк</h1>
-        <h3 class="header__subtitle">Человек, который стремится работать только на одной работе)</h3>
+        <h3 class="header__subtitle">Умею в юмор и самоиронию</h3>
       </div>
     </header>
     <main>
       <section class="links">
-        <h2 class="links__header">Не люблю звонки, лучше пишите</h2>
+        <h2 class="links__header">Вижу возможности — действую!</h2>
         <ul class="links__container">
           <li class="links__link">
-            <p class="links__title">Телеграм</p>
+            <p class="links__title">Telegram:</p>
             <a class="linsk__link" href="@viktoriya_sopilnyak">@viktoriya_sopilnyak</a>
         
-          </li>
-        </ul>
+            </ul>
       </section>
       <section class="links">
-        <h2 class="links__header">Что я делаю 24/7</h2>
-        <ul class="links__container">
+        <h2 class="links__header">Обо мне:</h2>
+              <ul class="links__container">
           <li class="links__link">
-            <p class="links__title">Делаю домашки от</p>
-            <a class="linsk__link" href="@german_dlinikov">https://qa.studio/</a>
+            <p class="links__title">Возраст</p>
+            <p class="links__title">32 — и это не предел!</p>
+          </li>
           </li>
           <li class="links__link">
-            <p class="links__title">Работаю на заводе</p>
-            <a class="linsk__link" href="https://www.rosneft.ru/about/Glance/OperationalStructure/Pererabotka/nknpz/">АО "НК НПЗ"</a>
+            <p class="links__title">Работаю</p>
+            <p class="links__title">с 18-и лет</p>
           </li>
           <li class="links__link">
-            <p class="links__title">Ратотаю лыжным тренером</p>
-            <a class="linsk__link" href="https://vk.com/club20710269?from=groups">..и летом тоже</a>
+            <p class="links__title">Не боюсь</p>
+            <p class="links__title">сложностей</p>
           </li>
           <li class="links__link">
-            <p class="links__title">Работаю помощником руководителя</p>
-            <a class="linsk__link">Потому что попросили</a>
-          </li>
-          <li class="links__link">
-            <p class="links__title">Делаю ремонт</p>
-            <a class="linsk__link" href="https://yandex.ru/images/search?img_url=https%3A%2F%2Fthumbs.dreamstime.com%2Fz%2Fszcz%25C4%2599%25C5%259Bliwy-ojciec-i-syn-przygotowywaj%25C4%2585cy-naprawia%25C4%2587-dom-74797447.jpg&lr=51&pos=35&rpt=simage&text=ремонт%20папа">у моего папы золотые руки и доброе сердце)</a>
+            <p class="links__title">Люблю</p>
+            <p class="links__title">головоломки</p>
           </li>
           <li class="links__link">
             <p class="links__title">Задачка на логику:</p>
-            <a class="linsk__link">Хлеб весит килограм и полхлеба, сколько весит целый хлеб?</a>
+            <a class="linsk__link">Хлеб весит килограмм и полхлеба, сколько весит целый хлеб?</a>
           </li>
         </ul>
       </section>
