--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Telegram:</p>
-            <a class="linsk__link" href="@viktoriya_sopilnyak">@viktoriya_sopilnyak</a>
-        
+            <a class="linsk__link" href="https://t.me/viktoriya_sopilnyak">@viktoriya_sopilnyak</a>
+
             </ul>
       </section>
       <section class="links">
